[MODORDERS-1367-2]. Prevent releasing in a different fiscal year (#1196)
* [MODORDERS-1367-2]. Prevent releasing in a different fiscal year

* [MODORDERS-1367-2]. Apply review recommendations